{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 39,
  "lineage": "91670a9d-23b1-7086-fc04-cddcfb4e30f5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:network-acl/acl-0f3820214f7569818",
            "default_network_acl_id": "acl-0f3820214f7569818",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f3820214f7569818",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "001435693845",
            "subnet_ids": [
              "subnet-01262fe826504fc51",
              "subnet-0550cd58debd3354f",
              "subnet-0867cbc05b67471dc",
              "subnet-087d1873924dfc2eb",
              "subnet-08877b45cb52d6e37",
              "subnet-09d7ab92a823cf8a7",
              "subnet-0a2d8db3d08cc6a0d",
              "subnet-0b8769a2a9abbd62d",
              "subnet-0c606fa118d17c761"
            ],
            "tags": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:route-table/rtb-0b2d38e33cb87a1cb",
            "default_route_table_id": "rtb-0b2d38e33cb87a1cb",
            "id": "rtb-0b2d38e33cb87a1cb",
            "owner_id": "001435693845",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:security-group/sg-095dc03986c16831c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-095dc03986c16831c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "001435693845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-eks-ns-default",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0043c8fded2aab9a1",
            "tags": {
              "Name": "rnvp-vpc",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2f8cdbc422fbfe1",
            "domain": "vpc",
            "id": "eipalloc-0e2f8cdbc422fbfe1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-20-158-57.compute-1.amazonaws.com",
            "public_ip": "107.20.158.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rnvp-vpc-us-east-1a",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc-us-east-1a",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:internet-gateway/igw-0869c7d5c077e0f83",
            "id": "igw-0869c7d5c077e0f83",
            "owner_id": "001435693845",
            "tags": {
              "Name": "rnvp-vpc",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2f8cdbc422fbfe1",
            "connectivity_type": "public",
            "id": "nat-0550196f4054c81b7",
            "network_interface_id": "eni-0abfb751bfaa61ade",
            "private_ip": "172.28.64.171",
            "public_ip": "107.20.158.57",
            "subnet_id": "subnet-0c606fa118d17c761",
            "tags": {
              "Name": "rnvp-vpc-us-east-1a",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc-us-east-1a",
              "environment": "production",
              "resource": "rnvp-vpc"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0869c7d5c077e0f83",
            "id": "r-rtb-0968ce2c7cbdfe5601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0968ce2c7cbdfe560",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0043c8fded2aab9a1",
            "gateway_id": "",
            "id": "r-rtb-0968ce2c7cbdfe5602750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0968ce2c7cbdfe560",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0043c8fded2aab9a1",
            "gateway_id": "",
            "id": "r-rtb-0bf2418180f83c3642750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf2418180f83c364",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0043c8fded2aab9a1",
            "gateway_id": "",
            "id": "r-rtb-0bf2418180f83c3642750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf2418180f83c364",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0043c8fded2aab9a1",
            "gateway_id": "",
            "id": "r-rtb-0bf2418180f83c3642750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf2418180f83c364",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf2418180f83c3641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0550196f4054c81b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf2418180f83c364",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0869c7d5c077e0f83",
            "id": "r-rtb-08159ad88dda96e0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08159ad88dda96e0a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0869c7d5c077e0f83",
            "id": "r-rtb-08159ad88dda96e0a2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08159ad88dda96e0a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:route-table/rtb-0968ce2c7cbdfe560",
            "id": "rtb-0968ce2c7cbdfe560",
            "owner_id": "001435693845",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rnvp-vpc-db",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc-db",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:route-table/rtb-0bf2418180f83c364",
            "id": "rtb-0bf2418180f83c364",
            "owner_id": "001435693845",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rnvp-vpc-private",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc-private",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:route-table/rtb-08159ad88dda96e0a",
            "id": "rtb-08159ad88dda96e0a",
            "owner_id": "001435693845",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rnvp-vpc-public",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-vpc-public",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0973b5700074f04e7",
            "route_table_id": "rtb-0968ce2c7cbdfe560",
            "subnet_id": "subnet-0a2d8db3d08cc6a0d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085666485452d6c93",
            "route_table_id": "rtb-0968ce2c7cbdfe560",
            "subnet_id": "subnet-08877b45cb52d6e37"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59c7c6c45b6078e",
            "route_table_id": "rtb-0968ce2c7cbdfe560",
            "subnet_id": "subnet-0867cbc05b67471dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9f9ac562e73f449",
            "route_table_id": "rtb-0bf2418180f83c364",
            "subnet_id": "subnet-01262fe826504fc51"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ed82aa2b42ff811",
            "route_table_id": "rtb-0bf2418180f83c364",
            "subnet_id": "subnet-09d7ab92a823cf8a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037d4b41b719ac93a",
            "route_table_id": "rtb-0bf2418180f83c364",
            "subnet_id": "subnet-087d1873924dfc2eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dc16340a34c95d8",
            "route_table_id": "rtb-08159ad88dda96e0a",
            "subnet_id": "subnet-0c606fa118d17c761"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3d8734c5390be3",
            "route_table_id": "rtb-08159ad88dda96e0a",
            "subnet_id": "subnet-0550cd58debd3354f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbb2a452cba4a78a",
            "route_table_id": "rtb-08159ad88dda96e0a",
            "subnet_id": "subnet-0b8769a2a9abbd62d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-0a2d8db3d08cc6a0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.28.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2d8db3d08cc6a0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-dbsubnt-11",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-dbsubnt-11",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-08877b45cb52d6e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.28.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08877b45cb52d6e37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-dbsubnt-12",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-dbsubnt-12",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-0867cbc05b67471dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.28.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0867cbc05b67471dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-dbsubnt-13",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-dbsubnt-13",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-01262fe826504fc51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.28.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01262fe826504fc51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-prsubnt-1",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-prsubnt-1",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-09d7ab92a823cf8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.28.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d7ab92a823cf8a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-prsubnt-2",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-prsubnt-2",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-087d1873924dfc2eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.28.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087d1873924dfc2eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-prsubnt-3",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-prsubnt-3",
              "environment": "production",
              "karpenter.sh/discovery": "rnvp-eks-ns",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-0c606fa118d17c761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.28.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c606fa118d17c761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-psubnt-64",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-psubnt-64",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-0550cd58debd3354f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.28.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0550cd58debd3354f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-psubnt-65",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-psubnt-65",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:subnet/subnet-0b8769a2a9abbd62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.28.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8769a2a9abbd62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001435693845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rnvp-psubnt-66",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp-psubnt-66",
              "environment": "production",
              "kubernetes.io/cluster/rnvp-eks-ns": "shared",
              "kubernetes.io/role/elb": "1",
              "resource": "rnvp-vpc"
            },
            "vpc_id": "vpc-090f40c0e18408d6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001435693845:vpc/vpc-090f40c0e18408d6e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.28.0.0/16",
            "default_network_acl_id": "acl-0f3820214f7569818",
            "default_route_table_id": "rtb-0b2d38e33cb87a1cb",
            "default_security_group_id": "sg-095dc03986c16831c",
            "dhcp_options_id": "dopt-05eba7d2c6cf40afd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090f40c0e18408d6e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03c81c7e3023b21f4",
            "ipv6_cidr_block": "2600:1f10:4c9b:c800::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2d38e33cb87a1cb",
            "owner_id": "001435693845",
            "tags": {
              "Name": "rnvp",
              "environment": "production",
              "resource": "rnvp-vpc"
            },
            "tags_all": {
              "Name": "rnvp",
              "environment": "production",
              "resource": "rnvp-vpc"
            }
          }
        }
      ]
    }
  ]
}